--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,22 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+  "compilerOptions": {
+    "target": "es6",                          // Specify ECMAScript target version
+    "module": "commonjs",                     // Specify module code generation
+    "jsx": "react-jsx",                       // Specify JSX code generation
+    "strict": true,                           // Enable all strict type-checking options
+    "esModuleInterop": true,                  // Enables emit interoperability between CommonJS and ES Modules
+    "skipLibCheck": true,                     // Skip type checking of declaration files
+    "forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file
+    "baseUrl": "./src",                       // Base directory to resolve non-relative module names
+    "paths": {
+      "*": ["node_modules/*"]                 // Path mapping for module resolution
+    }
+  },
+  "include": [
+    "src/**/*"                                 // Include all files in the src directory
+  ],
+  "exclude": [
+    "node_modules",                            // Exclude node_modules directory
+    "**/*.spec.ts"                             // Exclude test files
   ]
 }
